Throw in a service around the breadcrumbs api calls and add activity to the uploads